major renovating and first successful mongodb endpoint
