# src/docs/swagger.json
@@ -17,42 +17,42 @@
     "host": "localhost:8081",
     "basePath": "/api/v1",
     "paths": {
-        "/teams": {
+        "/teams/list": {
             "get": {
-                "description": "get teams",
+                "description": "list all teams",
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
                     "teams"
                 ],
-                "summary": "List teams",
+                "summary": "List all teams",
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/model.Team"
+                                "$ref": "#/definitions/teams.Team"
                             }
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/httputil.HTTPError"
+                            "type": "string"
                         }
                     },
                     "404": {
                         "description": "Not Found",
                         "schema": {
-                            "$ref": "#/definitions/httputil.HTTPError"
+                            "type": "string"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/httputil.HTTPError"
+                            "type": "string"
                         }
                     }
                 }
@@ -60,52 +60,29 @@
         }
     },
     "definitions": {
-        "httputil.HTTPError": {
+        "teams.Team": {
             "type": "object",
             "properties": {
-                "code": {
-                    "type": "integer",
-                    "example": 400
+                "_id": {
+                    "type": "string"
                 },
-                "message": {
-                    "type": "string",
-                    "example": "status bad request"
-                }
-            }
-        },
-        "model.Team": {
-            "description": "Team information",
-            "type": "object",
-            "properties": {
                 "createdat": {
-                    "description": "Creation timestamp",
-                    "type": "string",
-                    "format": "string",
-                    "example": "08-23-2022"
+                    "type": "string"
                 },
                 "department": {
-                    "description": "Parent department of team",
-                    "type": "string",
-                    "format": "string",
-                    "example": "cybersecurity"
+                    "type": "string"
                 },
                 "id": {
-                    "description": "ID of team",
-                    "type": "integer",
-                    "format": "int64",
-                    "example": 1
+                    "type": "integer"
                 },
                 "name": {
-                    "description": "Name of team",
-                    "type": "string",
-                    "format": "string",
-                    "example": "cyber operations"
+                    "type": "string"
                 },
                 "tags": {
-                    "description": "Tags assigned to the team using the UI",
-                    "type": "string",
-                    "format": "string",
-                    "example": "security"
+                    "type": "object",
+                    "additionalProperties": {
+                        "type": "string"
+                    }
                 }
             }
         }
