# src/main.go
@@ -3,16 +3,15 @@ package main
 import (
 	"fmt"
 	"log"
+	"net/http"
 	"os"
 	"time"
 
-	"github.com/MiriConf/miriconf-backend/controller"
+	"github.com/MiriConf/miriconf-backend/teams"
 
 	_ "github.com/MiriConf/miriconf-backend/docs"
-
-	"github.com/gin-gonic/gin"
-	swaggerFiles "github.com/swaggo/files"
-	ginSwagger "github.com/swaggo/gin-swagger"
+	"github.com/gorilla/mux"
+	httpSwagger "github.com/swaggo/http-swagger"
 )
 
 // @title           MiriConf Backend API
@@ -40,25 +39,56 @@ func main() {
 		log.Fatal("mongo URI is not specified, set with MONGO_URI environment variable")
 	}
 
-	fmt.Println("docs accesible at /swagger/index.html")
+	fmt.Println("docs accesible at localhost:8081/docs/")
 
-	mainRouter := gin.Default()
-	mainController := controller.NewController()
+	r := mux.NewRouter()
 
-	v1 := mainRouter.Group("/api/v1")
-	{
-		teams := v1.Group("/teams")
-		{
-			// root teams
-			teams.GET("/all", mainController.ListTeams)
-			//teams.POST("", mainController.AddTeam)
-			//teams.GET(":id", mainController.ShowTeam)
-			//teams.PATCH(":id", mainController.UpdateTeam)
-			//teams.DELETE(":id", mainController.DeleteTeam)
-			// teams meta
-			//teams.GET(":id/members", mainController.ListTeamMembers)
-		}
-	}
-	mainRouter.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
-	mainRouter.Run(":8081")
+	// API Endpoints
+
+	// Teams
+	r.HandleFunc("/api/v1/teams/list", teams.ListTeams).Methods("GET")
+	r.HandleFunc("/api/v1/teams/get/{id}", teams.GetTeams).Methods("GET")
+	r.HandleFunc("/api/v1/teams", teams.CreateTeams).Methods("POST")
+	r.HandleFunc("/api/v1/teams/{id}", teams.EditTeams).Methods("PUT")
+	r.HandleFunc("/api/v1/teams/{id}", teams.DeleteTeams).Methods("DELETE")
+
+	r.PathPrefix("/docs/").Handler(httpSwagger.WrapHandler)
+
+	// Start server
+	log.Fatal(http.ListenAndServe(":8081", r))
 }
+
+//func (c *Controller) ListTeams(ctx *gin.Context) {
+//	var uri string
+//	if uri = os.Getenv("MONGO_URI"); uri == "" {
+//		log.Fatal("You must set your 'MONGODB_URI' environmental variable")
+//	}
+//
+//	client, err := mongo.Connect(context.TODO(), options.Client().ApplyURI(uri))
+//	if err != nil {
+//		panic(err)
+//	}
+//	defer func() {
+//		if err = client.Disconnect(context.TODO()); err != nil {
+//			panic(err)
+//		}
+//	}()
+//
+//	coll := client.Database("miriconf").Collection("teams")
+//
+//	filter := bson.D{{"id", bson.D{{"$lte", 500}}}}
+//	cursor, err := coll.Find(context.TODO(), filter)
+//	if err != nil {
+//		panic(err)
+//	}
+//
+//	var results []bson.D
+//	if err = cursor.All(context.TODO(), &results); err != nil {
+//		panic(err)
+//	}
+//
+//	var testTeam Team
+//	err = bson.Unmarshal(results, &testTeam)
+//
+//	ctx.JSON(http.StatusOK, results)
+//}
